# holy-moly-mcp

./: .gitignore  Dockerfile.web  README.md  docker-compose.yml  mcp_server.py  pyproject.toml  renovate.json
.github/workflows/: publish-remote.yml  test-server.yml
frontend/: Dockerfile.frontend  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
remote/: README.md  pyproject.toml
remote/holy_moly_remote/: __init__.py  mcp_remote_server.py
server/: pyproject.toml
server/holy_moly_server/: mcp_server.py  web_server.py
server/holy_moly_server/services/: __init__.py  converter.py  pdf_converter.py  tts_local.py
server/tests/: test_converter_service.py
src/: mcp_server.py  web_server.py
src/services/: converter.py  md_to_pdf.py  tts_local.py
tests/: test_converter_service.py  test_mcp_server.py
